RESOLVED FIXED218392
[GStreamer] Fix GStreamerCommon.cpp debug category
https://bugs.webkit.org/show_bug.cgi?id=218392
Summary [GStreamer] Fix GStreamerCommon.cpp debug category
Xabier Rodríguez Calvar
Reported 2020-10-30 10:05:47 PDT
[GStreamer] Fix GStreamerCommon.cpp debug category
Attachments
Patch (1.52 KB, patch)
2020-10-30 10:09 PDT, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2020-10-30 10:09:39 PDT
Víctor M. Jáquez L.
Comment 2 2020-11-02 06:43:41 PST
lgtm
EWS
Comment 3 2020-11-02 22:56:59 PST
Committed r269286: <https://trac.webkit.org/changeset/269286> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412764 [details].
Radar WebKit Bug Importer
Comment 4 2020-11-02 22:57:16 PST
Note You need to log in before you can comment on or make changes to this bug.