[GStreamer] Fix GStreamerCommon.cpp debug category https://bugs.webkit.org/show_bug.cgi?id=218392

Reviewed by Adrian Perez de Castro.

GStreamerCommon.cpp lacked a default debug category so debug from
that file was not appearing under the WebKit category but empty.

* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::initializeGStreamer):


Canonical link: https://commits.webkit.org/231137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269286 268f45cc-cd09-0410-ab3c-d52691b4dbfc